--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h3{
     border-radius: 5px;
     color: white;
     font-weight: 600;
+    text-decoration: none;
 }
 
 #fst-img{
@@ -41,4 +42,21 @@ h3{
     margin-right: 5%;
     margin-top: 10px;
    
+}
+
+.dream-big-section{
+    display: flex;
+    margin-top: 130px;
+    background-image: url(./img/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+#second-img{
+    margin-left: 7%;
+}
+
+.dream-big{
+    margin-left: 12%;
+    padding-right: 7%;
 }
